[package]
name = "chormaeleon_chorportal_database_adapter"
version = "0.1.0"
authors = ["Nick Grüßner <inf18241@lehre.dhbw-stuttgart.de>"]
edition = "2018"

[dependencies]
lettre = "0.10.0-beta.3"
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
chrono = "0.4.19"

[dev-dependencies]
dotenv = "0.15.0"